# AERSP-424

./: CMakeLists.txt  main.cpp  test.cpp
Class/Week 4/1-30/: CMakeLists.txt  notes.cpp
Homework 1/Question 1/: CMakeLists.txt  Question1.cpp
Homework 1/Question 2/: CMakeLists.txt  Question2.cpp
Homework 1/Question 3/: CMakeLists.txt  Plane.h  Question3.cpp
Homework 1/Question 4/: CMakeLists.txt  Plane.h  Question4.cpp
Homework 1/Question 5/: CMakeLists.txt  Plane.h  Question5.cpp
Homework 1/Question 6/: CMakeLists.txt  Pilot.h  Plane.h  Question6.cpp
Homework 1/Question 7/: CMakeLists.txt  Pilot.h  Plane.h  Question7.cpp
Homework 1/Question 8/: CMakeLists.txt  Pilot.h  Question8.cpp
Homework 2/Question 1/: AerospaceControlSystem.h  CMakeLists.txt  Pressure.h  Question1.cpp  Sensor.h  SensorFactory.h  Temperature.h  Velocity.h
Homework 2/Question 2/: CMakeLists.txt  Question2.cpp
Homework 2/Question 3/: CMakeLists.txt  Question3.cpp
Homework 2/Question 4/: CMakeLists.txt  Question4.cpp
Homework 2/Question 5/: Question5.txt
Homework 2/Question 6/: Question 6.txt
